# scat_lib

./: .gitignore  ne.py  pyproject.toml
docs/: gas_iam_guide.rst  iam_guide.rst  index.rst  installation_guide.rst  requirements.txt
scat_lib/gas_iam/: 00001.xyz  __init__.py  __main__.py  cm.py  geometry.py  scattering.py  xraydb_provider.py
scat_lib/gas_iam/data/: isfl.txt
scat_lib/iam/providers/: xraydb_provider.py
scat_lib/pyscf_scat/: make_zcontraction_files.py  mo2ao.py  molden_reader_nikola_morder.py  scat_calc.py
tests/: test_gas_iam_j2.py  test_gas_iam_normalisation.py  test_gas_iam_pyscf_bridge.py  test_gas_iam_scattering.py
