[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scat_lib"
version = "1.0.0"
description = "A Python library for calculating X-ray scattering from ab initio electronic structure calculations using PySCF"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Patrick Wang"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pyscf>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "colorcet>=2.0.0",
    "xraydb>=4.4",
    "importlib_resources>=5; python_version < \"3.9\""
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/KirranderGroup/scat_lib"
Documentation = "https://scat-lib.readthedocs.io"
Repository = "https://github.com/KirranderGroup/scat_lib"

[project.scripts]
scat-lib-build = "scat_lib.build:main"

[tool.setuptools]
include-package-data = true
packages = [
    "scat_lib",
    "scat_lib.iam",
    "scat_lib.iam.providers",
    "scat_lib.pyscf_scat",
    "scat_lib.gas_iam",
    "scat_lib.fortran_src"
]

[tool.setuptools.package-dir]
"scat_lib.fortran_src" = "src"

[tool.setuptools.package-data]
"scat_lib" = ["bin/*", "*.py"]
"scat_lib.iam" = ["data/*.txt", "*.py"]
"scat_lib.iam.providers" = ["*.py"]
"scat_lib.pyscf_scat" = ["*.py"]
"scat_lib.gas_iam" = ["*.py","data/*.txt", "*.txt"]
"scat_lib.fortran_src" = ["*.f", "*.f90", "*.f95", "*.F90", "build/*.f", "build/*.f90", "build/*.f95", "build/*.F90", "build/*.sh"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=scat_lib"
